# openground

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: pr-check.yml
data/: demo_documented_milestones.json
openground/: __init__.py  application.py  ccsds.py  config.py  deps.py  logging_config.py  simulation_profile.py
openground/adapters/: envelope_mapper.py
openground/core/: __init__.py  runtime.py
openground/routers/: __init__.py  envelope_adapter.py  health.py  ingest.py  openmct_api.py  websocket.py
openground/services/: __init__.py  connection.py  fault_detector.py  flight_rules.py  ingest_normalize.py  iss_telemetry.py  milestone_timeline.py  sequence.py  simulator.py  state_machine.py
openground/store/: __init__.py  schema_telemetry.sql  telemetry_postgres.py
static/: app.js  index.html
tests/: __init__.py  test_ccsds.py  test_config.py  test_envelope_adapter.py  test_fault_detector.py  test_flight_rules.py  test_http.py  test_iss_telemetry.py  test_milestone_timeline.py  test_sequence.py  test_simulation_profile.py  test_simulator_met.py  test_state_machine.py
