[project]
name = "openground"
version = "0.1.0"
description = "Learning sandbox: Open MCT integration + simplified CCSDS-style telemetry framing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["openground", "tests", "main.py"]
exclude = [".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]

[tool.ruff.format]
quote-style = "double"
